# quaternions

./: .coverage  LICENSE.txt  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml  python-package.yml
src/: __init__.py  quaternions.py
src/quaternions/: quaternions.py
tests/: __init__.py  test_quaternion.py  test_quaternions.py
