[project]
name = "quaternions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jesse Charlton", email = "57236497+jchar32@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = ["numpy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=["src/quaternions"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 200
src = ['src', 'quaternions']
target-version = "py312"

[tool.ruff.analyze]
detect-string-imports = true

[dependency-groups]
dev = [
    "ipympl>=0.9.6",
    "jupyter>=1.1.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.6",
]
